WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
305719
REGRESSION (iOS 26): Datalist options obscure text input
https://bugs.webkit.org/show_bug.cgi?id=305719
Summary
REGRESSION (iOS 26): Datalist options obscure text input
Jeremy Keith
Reported
2026-01-18 02:39:23 PST
Created
attachment 478061
[details]
A screenshot of The Session on an iPhone during a search on the homepage. The search input is completely obscured by the text: The Road To Lisdoonvarna. Suggestions from a datalist element are presented directly over the associated input, obscuring it. Steps to reproduce: * Go to
https://thesession.org/
* Tap into the search input * Begin typing a search for "the road to town" Once the datalist is populated (after you've typed "the road to"), the search input is completely covered up by the suggestion "The Road To Lisdoonvarna". More details here:
https://adactio.com/journal/22360
This isn't the first time a regression like this has happened with the datalist element:
https://adactio.com/journal/21445
Attachments
A screenshot of The Session on an iPhone during a search on the homepage. The search input is completely obscured by the text: The Road To Lisdoonvarna.
(318.53 KB, image/png)
2026-01-18 02:39 PST
,
Jeremy Keith
no flags
Details
A search input on theSession.org where the value of a search suggestion covers the text in the input, even though he suggested text is about half the size of the rest of the text on the page.
(710.83 KB, image/png)
2026-01-19 10:08 PST
,
Adrian Roselli
no flags
Details
Another search input now showing three suggestions that cover the input, with text that is still about half the size of surrounding text and which wraps at less than half the width of the input.
(424.54 KB, image/png)
2026-01-19 10:08 PST
,
Adrian Roselli
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Adrian Roselli
Comment 1
2026-01-19 10:06:53 PST
Confirmed this affects iPadOS 26.2. Attaching screen shots.
Adrian Roselli
Comment 2
2026-01-19 10:08:06 PST
Created
attachment 478070
[details]
A search input on theSession.org where the value of a search suggestion covers the text in the input, even though he suggested text is about half the size of the rest of the text on the page. iPadOS 26.2, 1 of 2.
Adrian Roselli
Comment 3
2026-01-19 10:08:39 PST
Created
attachment 478071
[details]
Another search input now showing three suggestions that cover the input, with text that is still about half the size of surrounding text and which wraps at less than half the width of the input. iPadOS 26.2, 2 of 2.
Alexey Proskuryakov
Comment 4
2026-01-19 20:06:39 PST
Thank you for the report! I can reproduce with iOS 26 and iOS 26.2; cannot reproduce with iOS 18.6.
Radar WebKit Bug Importer
Comment 5
2026-01-19 20:07:17 PST
<
rdar://problem/168475613
>
Jeremy Keith
Comment 6
2026-01-21 01:43:07 PST
Just a heads-up now that the behaviour has been confirmed: I've removed the datalist element for iOS from the website link to above, because of the severity of this bug.
pascoe@apple.com
Comment 7
2026-03-13 11:13:17 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/60576
Jeremy Keith
Comment 8
2026-03-24 16:10:28 PDT
(In reply to
pascoe@apple.com
from
comment #7
)
> Pull request:
https://github.com/WebKit/WebKit/pull/60576
This does nothing to address the problem described in this bug report. I think there’s been some kind of misunderstanding.
Karl Dubost
Comment 9
2026-03-24 23:25:13 PDT
Hi Jeremy, The PR is just a draft. AND this comment says it too.
https://github.com/WebKit/WebKit/pull/60576#issuecomment-4057119182
Nothing is solved yet. Nothing has changed in Safari and WebKit yet, with regards to this issue.
Jessica Cheung
Comment 10
2026-04-06 12:24:04 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62137
EWS
Comment 11
2026-04-07 13:10:44 PDT
Committed
310733@main
(39156fa7001f): <
https://commits.webkit.org/310733@main
> Reviewed commits have been landed. Closing PR #62137 and removing active labels.
EWS
Comment 12
2026-04-08 14:39:02 PDT
Committed
305413.633@safari-7624-branch
(f76ce3febd51): <
https://commits.webkit.org/305413.633@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4906 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug