Source/WebKit/UIProcess/ios/CompactContextMenuPresenter.mm
@@ -40,11 +40,55 @@
 @end
 #endif
 
-@interface WKCompactContextMenuPresenterButton : UIButton
-@property (nonatomic, weak) id<UIContextMenuInteractionDelegate> externalDelegate;
+@interface WKCompactContextMenuPresenterControl : UIControl <WKCompactContextMenuPresenter>
+@end
+
+@interface WKCompactContextMenuPresenterButton : UIButton <WKCompactContextMenuPresenter>
+@end
+
+@implementation WKCompactContextMenuPresenterControl
+@synthesize externalDelegate = _externalDelegate;
+
+- (UIContextMenuConfiguration *)contextMenuInteraction:(UIContextMenuInteraction *)interaction configurationForMenuAtLocation:(CGPoint)location
+{
+    RetainPtr externalDelegate = _externalDelegate;
+    if ([externalDelegate respondsToSelector:@selector(contextMenuInteraction:configurationForMenuAtLocation:)])
+        return [externalDelegate contextMenuInteraction:interaction configurationForMenuAtLocation:location];
+
+    return [super contextMenuInteraction:interaction configurationForMenuAtLocation:location];
+}
+
+- (UITargetedPreview *)contextMenuInteraction:(UIContextMenuInteraction *)interaction configuration:(UIContextMenuConfiguration *)configuration highlightPreviewForItemWithIdentifier:(id<NSCopying>)identifier
+{
+    RetainPtr externalDelegate = _externalDelegate;
+    if ([externalDelegate respondsToSelector:@selector(contextMenuInteraction:configuration:highlightPreviewForItemWithIdentifier:)])
+        return [externalDelegate contextMenuInteraction:interaction configuration:configuration highlightPreviewForItemWithIdentifier:identifier];
+
+    return [super contextMenuInteraction:interaction configuration:configuration highlightPreviewForItemWithIdentifier:identifier];
+}
+
+- (void)contextMenuInteraction:(UIContextMenuInteraction *)interaction willDisplayMenuForConfiguration:(UIContextMenuConfiguration *)configuration animator:(id<UIContextMenuInteractionAnimating>)animator
+{
+    [super contextMenuInteraction:interaction willDisplayMenuForConfiguration:configuration animator:animator];
+
+    RetainPtr externalDelegate = _externalDelegate;
+    if ([externalDelegate respondsToSelector:@selector(contextMenuInteraction:willDisplayMenuForConfiguration:animator:)])
+        [externalDelegate contextMenuInteraction:interaction willDisplayMenuForConfiguration:configuration animator:animator];
+}
+
+- (void)contextMenuInteraction:(UIContextMenuInteraction *)interaction willEndForConfiguration:(UIContextMenuConfiguration *)configuration animator:(id<UIContextMenuInteractionAnimating>)animator
+{
+    [super contextMenuInteraction:interaction willEndForConfiguration:configuration animator:animator];
+
+    RetainPtr externalDelegate = _externalDelegate;
+    if ([externalDelegate respondsToSelector:@selector(contextMenuInteraction:willEndForConfiguration:animator:)])
+        [externalDelegate contextMenuInteraction:interaction willEndForConfiguration:configuration animator:animator];
+}
+
 @end
 
 @implementation WKCompactContextMenuPresenterButton
+@synthesize externalDelegate = _externalDelegate;
 
 - (UIContextMenuConfiguration *)contextMenuInteraction:(UIContextMenuInteraction *)interaction configurationForMenuAtLocation:(CGPoint)location
 {
@@ -84,16 +128,20 @@ namespace WebKit {
 
 WTF_MAKE_TZONE_ALLOCATED_IMPL(CompactContextMenuPresenter);
 
-CompactContextMenuPresenter::CompactContextMenuPresenter(UIView *rootView, id<UIContextMenuInteractionDelegate> delegate)
+CompactContextMenuPresenter::CompactContextMenuPresenter(UIView *rootView, id<UIContextMenuInteractionDelegate> delegate, ShowsMenuFromSource showsMenuFromSource)
     : m_rootView(rootView)
-    , m_button([WKCompactContextMenuPresenterButton buttonWithType:UIButtonTypeSystem])
 {
-    [m_button setExternalDelegate:delegate];
-    [m_button layer].zPosition = CGFLOAT_MIN;
-    [m_button setHidden:YES];
-    [m_button setUserInteractionEnabled:NO];
-    [m_button setContextMenuInteractionEnabled:YES];
-    [m_button setShowsMenuAsPrimaryAction:YES];
+    if (showsMenuFromSource == ShowsMenuFromSource::Yes)
+        m_control = [WKCompactContextMenuPresenterButton buttonWithType:UIButtonTypeSystem];
+    else
+        m_control = adoptNS([[WKCompactContextMenuPresenterControl alloc] init]);
+
+    [m_control setExternalDelegate:delegate];
+    [m_control layer].zPosition = CGFLOAT_MIN;
+    [m_control setHidden:YES];
+    [m_control setUserInteractionEnabled:NO];
+    [m_control setContextMenuInteractionEnabled:YES];
+    [m_control setShowsMenuAsPrimaryAction:YES];
 }
 
 CompactContextMenuPresenter::~CompactContextMenuPresenter()
@@ -101,7 +149,7 @@ CompactContextMenuPresenter::~CompactContextMenuPresenter()
     [UIView performWithoutAnimation:^{
         dismiss();
     }];
-    [m_button removeFromSuperview];
+    [m_control removeFromSuperview];
 }
 
 void CompactContextMenuPresenter::present(CGPoint locationInRootView)
@@ -111,7 +159,7 @@ void CompactContextMenuPresenter::present(CGPoint locationInRootView)
 
 UIContextMenuInteraction *CompactContextMenuPresenter::interaction() const
 {
-    return [m_button contextMenuInteraction];
+    return [m_control contextMenuInteraction];
 }
 
 void CompactContextMenuPresenter::present(CGRect rectInRootView)
@@ -119,14 +167,14 @@ void CompactContextMenuPresenter::present(CGRect rectInRootView)
     if (!m_rootView.window)
         return;
 
-    [m_button setFrame:rectInRootView];
-    if (![m_button superview])
-        [m_rootView addSubview:m_button.get()];
+    [m_control setFrame:rectInRootView];
+    if (![m_control superview])
+        [m_rootView addSubview:m_control.get()];
 
 #if HAVE(UI_BUTTON_PERFORM_PRIMARY_ACTION)
-    static BOOL canPerformPrimaryAction = [UIButton instancesRespondToSelector:@selector(performPrimaryAction)];
+    static BOOL canPerformPrimaryAction = [UIControl instancesRespondToSelector:@selector(performPrimaryAction)];
     if (canPerformPrimaryAction) {
-        [m_button performPrimaryAction];
+        [m_control performPrimaryAction];
         return;
     }
 #endif
@@ -136,7 +184,7 @@ void CompactContextMenuPresenter::present(CGRect rectInRootView)
 
 void CompactContextMenuPresenter::dismiss()
 {
-    [[m_button contextMenuInteraction] dismissMenu];
+    [[m_control contextMenuInteraction] dismissMenu];
 }
 
 void CompactContextMenuPresenter::updateVisibleMenu(UIMenu *(^updateBlock)(UIMenu *))
